# phresizer

./: .gitignore  CMakeLists.txt  phresizer.sublime-project  phresizer.sublime-workspace
cmake/modules/: FindGraphicsMagick.cmake
src/: Config.cpp  Config.h  ImageResizer.cpp  ImageResizer.h  ImageResizerMagick.cpp  ImageResizerMagick.h  Size.cpp  Size.h  Version.h  main.cpp
